[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/powerups/powerup-heart.png" type="Texture" id=1]
[ext_resource path="res://scenes/powerup/powerup.gd" type="Script" id=2]
[ext_resource path="res://assets/powerups/powerup-rps.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 19.105

[node name="Powerup" type="Area2D"]
script = ExtResource( 2 )
powerup_id = "rps"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.5, 4.76837e-07 )
scale = Vector2( 1.35, 1.5 )

[node name="Sprites" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="heart" type="Sprite" parent="Sprites"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="rps" type="Sprite" parent="Sprites"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Powerup_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
